--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "vue-electron": "^1.0.6",
     "vue-filter": "^0.2.4",
     "vue-router": "^2.5.3",
+    "vuedraggable": "^2.16.0",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
